# Mortalis-Game-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  conanfile.txt
.github/workflows/: build.yml
cmake/: CompilerWarnings.cmake  Conan.cmake
cmake/Scripts/: ClangTidy.cmake  Warnings.cmake
data_example/: skills.json
gametest/: CMakeLists.txt
gametest/src/: gametest.cpp
mge/: CMakeLists.txt
mge/include/mge/ecs/: ComponentFamily.hpp  ComponentPool.hpp  ComponentRegistry.hpp  Entity.hpp
mge/test/: ComponentPoolTest.cpp  EntityIdTest.cpp
playground/entt-test/: CMakeLists.txt
playground/entt-test/src/: entt-test.cpp
playground/sprite-test/: CMakeLists.txt
playground/sprite-test/src/: sprite-test.cpp
source/GameTest/: Global.hpp  MortalisGameEngine.cpp  Type.hpp  main.cpp
source/GameTest/Maps/: Maps.cpp  Maps.hpp
source/GameTest/Physics/: Arm.hpp
source/GameTest/Scenes/: CarreRouge.cpp  CarreRouge.hpp  Exploration.cpp  Exploration.hpp  SceneMap.cpp  SceneMap.hpp  SimuScene.cpp  SimuScene.hpp
source/GameTest/Sprites/: HerosSprite.cpp  HerosSprite.hpp  RobotArm.hpp
source/GameTest/States/: CarreRouge.cpp  CarreRouge.hpp  SceneMap.cpp  SceneMap.hpp
source/MGE/Config/: ActionConfig.hpp  CompilerConfig.hpp  MapConfig.hpp  SceneConfig.hpp
source/MGE/Core/Engine/: Engine.cpp  Engine.hpp
source/MGE/Core/Event/: Event.hpp
source/MGE/Core/Scene/: DummyScene.cpp  DummyScene.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
source/MGE/Core/Status/: Status.cpp  Status.hpp
source/MGE/Input/: ActionFSM.cpp  ActionFSM.hpp  Control.cpp  Control.hpp  Controller.hpp  DPad.cpp  DPad.hpp  Dualshock4Controller.cpp  Dualshock4Controller.hpp  Input.hpp  InputManager.cpp  InputManager.hpp  KeyboardAPI.hpp  KeyboardController.cpp  KeyboardController.hpp
source/MGE/Input/Keyboard/: DPad.cpp  DPad.hpp  KeyManager.cpp  KeyManager.hpp  Keyboard.cpp  Keyboard.hpp
source/MGE/Map/: TileMap.cpp  TileMap.hpp  TileMap.inl
source/MGE/Resource/: Resource.hpp  ResourceAdaptor.hpp  ResourceManager.hpp  TemplateResource.hpp  TemplateResourceHolder.hpp
source/MGE/Resource/Details/: AbstractResourceHolder.hpp  BaseResourceHolder.hpp  InputFileWrapper.hpp  Resource.inl  ResourceExceptions.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceManager.cpp  ResourceManager.inl  ResourceTraits.hpp  SFMLResourceAdaptor.hpp  StdIfstreamAdaptor.hpp  (+2 more)
source/MUL/: Bench.hpp  Bench2.hpp  Bench3.hpp  Factory.hpp  Functional.hpp  LICENSE.txt  Memory.hpp  NonCopyable.hpp  RoboticArm.hpp  SFE.hpp  TypeTraitsHelper.hpp
source/MUL/Bluetooth/: BtAddress.cpp  BtAddress.h  BtPacket.cpp  BtPacket.h  BtSocket.cpp  BtSocket.h  RfcommListener.cpp  RfcommListener.h  RfcommSocket.cpp  RfcommSocket.h
source/MUL/Event/: Event.cpp  Event.hpp
source/MUL/SFE/: AnimatedSprite.hpp  FpsCalculator.hpp  Joystick.cpp  SpriteGenerator.cpp  SpriteGenerator.hpp  TileMap.cpp  TileMap.hpp
source/MUL/Timer/: time_t.cpp  time_t.hpp  timer_t.cpp  timer_t.hpp
source/MUL/Vector2/: Vector2.hpp  Vector2.inl
sprite-test/: CMakeLists.txt
sprite-test/src/: sprite-test.cpp
